--------------------
Bazaar Release Notes
--------------------

.. contents::

IN DEVELOPMENT
--------------

  USER-VISIBLE CHANGES:

  NEW FEATURES:

    * New Branch hook ``transform_fallback_location`` allows a function to
      be called when looking up the stacked source. (Michael Hudson)

  IMPROVEMENTS:

    * ``BTreeIndex`` code now is able to prefetch extra pages to help tune
      the tradeoff between bandwidth and latency. Should be tuned
      appropriately to not impact commands which need minimal information,
      but provide a significant boost to ones that need more context. Only
      has a direct impact on the ``--development2`` format which uses
      btree's for the indexes. (John Arbash Meinel)

    * ``bzr dump-btree`` is a hidden command introduced to allow dumping
      the contents of a compressed btree file.  (John Arbash Meinel)

    * ``bzr pack`` now tells the index builders to optimize for size. For
      btree index repositories, this can save 25% of the index size
      (mostly in the text indexes). (John Arbash Meinel)

    * ``bzr push`` to an existing branch or repository on a smart server
      is faster, due to Bazaar making more use of the ``get_parent_map``
      RPC when querying the remote branch's revision graph.
      (Andrew Bennetts)

    * default username for bzr+ssh and sftp can be configured in
      authentication.conf. (Aaron Bentley)

    * launchpad-login now provides a default username for bzr+ssh and sftp
      URLs, allowing username-free URLs to work for everyone. (Aaron Bentley)

    * lp: lookups no longer include usernames, making them shareable and
      shorter. (Aaron Bentley)

  BUG FIXES:

    * A failure to load a plugin due to an IncompatibleAPI exception is
      now correctly reported. (Robert Collins, #279451)

    * API versioning support now has a multiple-version checking api
      ``require_any_api``. (Robert Collins, #279447)
