@@ -203,18 +203,36 @@ How to create a new development format
    ``bzrlib.repofmt``. You probably want to reproduce the current
    development format from ``bzrlib.repofmt.pack_repo`` with just new
    disk format strings, ``_get_matching_bzrdir`` and help.
-4. Alter any other things that do class based tests. The easiest way
+4. Register your development format with the various registries. At the
+   moment you need to update:
+
+    1. ``bzrlib/bzrdir.py`` to register the WT/Branch/Repository
+       collection.
+
+    2. ``bzrlib/workingtree.py``, ``bzrlib/branch.py``,
+       ``bzrlib/repository.py``, each one maintains a direct list of
+       their respective formats.
+
+    3. For repositories, you also need to update the InterKnit1and2
+       class. This is responsible for converting between rich-root and
+       non-rich-root repositories.
+
+    4. For repositories based on KnitPackRepository, you need to update
+       ``bzrlib/tests/test_pack_repository.py`` to add the class to the
+       tested permutations.
+
+5. Alter any other things that do class based tests. The easiest way
    to find these is a grep for Development in bzrlib - and please
    refactor as you find these to reduce the relevance this step has,
    as it should not need to exist.
-5. Now subclass/create from scratch/whatever the live object code you
+6. Now subclass/create from scratch/whatever the live object code you
    need to change to introduce your new format. Keep in mind that
    eventually it will become the default format, so please don't keep
    subclassing the last releases code, rather consider making the last
    releases code a subclass of your new code (if there is a lot in
    common) so that we can eventually remove that format once it becomes
    ancient (or relegate it to a plugin).
-6. Once you have made the changes that required a new disk format, you
+7. Once you have made the changes that required a new disk format, you
    should submit the resulting branch to be merged. Other changes - to
    take advantage of whatever new feature you have added - should be
    sent in separately, because the disk level changes are a contention
